Layout: fix wrapping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,7 @@ h1 {
 }
 
 h2 {
-  @apply md:text-4xl text-[20px];
+  @apply md:text-4xl text-[12px];
 }
 
 h1, h2 {
